--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -4,42 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <title>My Forge Tutorial</title>
-    <!-- Three JS -->
-    <script src="https://threejs.org/build/three.js"></script>
     <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <!-- JSTree -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jstree/3.3.7/jstree.min.js"></script>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jstree/3.3.7/themes/default/style.min.css" />
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
-        integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous"></script>
     <!-- Autodesk Forge Viewer files -->
     <link rel="stylesheet" href="https://developer.api.autodesk.com/modelderivative/v2/viewers/7.*/style.min.css"
         type="text/css">
     <script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/7.*/viewer3D.min.js"></script>
-    <!--Chart JS  packages-->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.css" />
+    <!--Font Awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- this project js files-->
-    <!-- dashboard files -->
     <script src="js/ForgeTree.js"></script>
     <script src="js/ForgeViewer.js"></script>
     <link href="css/main.css" rel="stylesheet" />
 </head>
-
-
-
 
 <body>
     <div id="viewport">
@@ -54,17 +34,18 @@
                 </button>
             </div>
         </div>
-        <div class="container fill-height">
-            <div id="userHubs" class="sidebar fill-height">
-
+        <div class="container fill-height fill-width">
+            <div id="sidebar-container" class="sidebar">
+                <div id="userHubs">
+                </div>
             </div>
-            <div id="forgeViewer" class="viewer fill-height">
-
+            <div id="forgeViewer" class="viewer fill-height fill-width">
             </div>
+        </div>
+        <div class="side-navigator fill-height">
+            <i class="fa fa-pie-chart"></i>
+            <i class="fa fa-car"></i>
         </div>
     </div>
 </body>
-
-<iframe id="hiddenFrame" style="visibility: hidden; display: none"></iframe>
-
 </html>
