added ModelElement file

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <title>My Forge Tutorial</title>
     <!-- jQuery library -->
-    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <!-- JSTree -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jstree/3.3.7/jstree.min.js"></script>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jstree/3.3.7/themes/default/style.min.css" />
@@ -18,6 +19,7 @@
     <!-- this project js files-->
     <script src="js/ForgeTree.js"></script>
     <script src="js/ForgeViewer.js"></script>
+    <script src="js/ModelElement.js"></script>
     <link href="css/main.css" rel="stylesheet" />
 </head>
 
@@ -48,4 +50,5 @@
         </div>
     </div>
 </body>
+
 </html>
