--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -22,7 +22,6 @@
     <script src="js/ForgeTree.js"></script>
     <script src="js/ForgeViewer.js"></script>
     <script src="js/ModelData.js"></script>
-    <script src="js/Dashboard.js"></script>
     <link href="css/main.css" rel="stylesheet" />
 </head>
 
@@ -44,13 +43,17 @@
                 <div id="userHubs">
                 </div>
             </div>
-            <div id="forgeViewer" class="viewer fill-height fill-width">
+            <div id="forgeViewer" class="viewer fill-height half-width left">
+            </div> 
+            <div id="dashboardViewer" class="viewer fill-height half-width right">
             </div>
         </div>
+        <!--
         <div class="side-navigator fill-height">
             <i class="fa fa-pie-chart" id="pieChart"></i>
             <i class="fa fa-car"></i>
         </div>
+        -->
     </div>
 </body>
 
