working piechart, todo add labels and clicking interaction

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -18,11 +18,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--D3 Charts-->
     <script src="https://d3js.org/d3.v6.min.js"></script>
+    <!-- Color scale -->
+    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
     <!-- this project js files-->
     <script src="js/ForgeTree.js"></script>
     <script src="js/ForgeViewer.js"></script>
     <script src="js/ModelData.js"></script>
     <link href="css/main.css" rel="stylesheet" />
+
 </head>
 
 <body>
@@ -44,7 +47,7 @@
                 </div>
             </div>
             <div id="forgeViewer" class="viewer fill-height half-width left">
-            </div> 
+            </div>
             <div id="dashboardViewer" class="viewer fill-height half-width right">
             </div>
         </div>
